# gadget4-simulations

./: .gitignore  README.md  alembic_migration_add_simulator_type.py  config.example.env  docker-compose.yml  format_code.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test_simulators.py
.github/: FIX_PERMISSIONS.md  README.md  SETUP.md
.github/workflows/: build-and-deploy.yml  build-deploy.yml
docker/: .dockerignore  Dockerfile.api  Dockerfile.concept  Dockerfile.gadget4  Dockerfile.worker  Dockerfile.worker-concept  Dockerfile.worker-gadget4
docs/: BUILD.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SIMULATORS.md
k8s/base/api/: deployment.yaml  kustomization.yaml  service.yaml
k8s/base/postgres/: kustomization.yaml  statefulset.yaml
k8s/base/redis/: deployment.yaml  kustomization.yaml
k8s/base/workers/: deployment-concept.yaml  deployment-gadget4.yaml  deployment.yaml  kustomization.yaml
k8s/overlays/beta/: kustomization.yaml  namespace.yaml
k8s/overlays/beta/patches/: api-replicas.yaml  environment.yaml  worker-concept-replicas.yaml  worker-gadget4-replicas.yaml  worker-replicas.yaml
k8s/overlays/stable/: kustomization.yaml  namespace.yaml
k8s/overlays/stable/patches/: api-replicas.yaml  environment.yaml  worker-concept-replicas.yaml  worker-gadget4-replicas.yaml  worker-replicas.yaml
src/api/: __init__.py  main.py
src/api/routers/: jobs.py
src/common/: __init__.py  config.py  database.py  models.py  schemas.py
src/workers/: __init__.py  tasks.py  worker.py
tests/: __init__.py  test_api.py
